# wagtail-flags

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml  test.yml
flags/: apps.py  conditions.py  decorators.py  edit_handlers.py  models.py  settings.py  state.py  template_functions.py  views.py
flags/migrations/: 0012_flaggablepage.py
flags/templates/flagadmin/: index.html
flags/templatetags/: feature_flags.py
flags/tests/: settings.py  test_decorators.py  test_edit_handlers.py  test_models.py  test_settings.py  test_state.py  test_template_functions.py  test_templatetags_feature_flags.py  test_views.py
wagtailflags/: __init__.py  apps.py  conditions.py  forms.py  signals.py  views.py  wagtail_hooks.py
wagtailflags/static/wagtailflags/css/: wagtailflags.css
wagtailflags/templates/wagtailflags/: base.html  index.html
wagtailflags/templates/wagtailflags/flags/: create.html  create_flag.html  delete.html  delete_condition.html  delete_flag.html  edit_condition.html  flag_index.html
wagtailflags/templates/wagtailflags/includes/: flag_breadcrumbs.html  flag_header.html  flag_index.html  header.html
wagtailflags/templatetags/: wagtailflags.py  wagtailflags_admin.py
wagtailflags/tests/: settings.py  test_apps.py  test_conditions.py  test_signals.py  test_templatetags_wagtailflags.py  test_templatetags_wagtailflags_admin.py  test_views.py  urls.py
