[tool.black]
line-length = 79
target-version = ['py36', 'py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.tox
    | \*.egg-info
    | _build
    | build
    | dist
    | migrations
    | site
    | \*.json
    | \*.csv
  )/
)
'''

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
