[build-system]
requires = ["setuptools>=63", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "wagtail-flags"
dynamic = ["version"]
description = "Feature flags for Wagtail sites"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "CC0"}
authors = [
    {name = "CFPB", email = "tech@cfpb.gov" }
]
dependencies = [
    "wagtail>6",
    "django-flags>5"
]
classifiers = [
    "Framework :: Django",
    "Framework :: Wagtail",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "License :: Public Domain",
    "Programming Language :: Python",
]

[project.optional-dependencies]
testing = [
    "coverage[toml]",
]

[project.urls]
"Homepage" = "https://github.com/cfpb/wagtail-flags"
"Bug Reports" = "https://github.com/cfpb/wagtail-flags/issues"
"Source" = "https://github.com/cfpb/wagtail-flags"

[tool.setuptools.package-data]
wagtailflags = [
    "templates/wagtailflags/*",
    "templates/wagtailflags/flags/*",
    "templates/wagtailflags/includes/*",
    "static/wagtailflags/css/*",
]

[tool.setuptools_scm]

[tool.ruff]
# Use PEP8 line-length
line-length = 79
# Exclude common paths
exclude = [
    ".git",
    ".tox",
    "__pycache__",
    "**/migrations/*.py",
]

[tool.ruff.lint]
ignore = ["E731", ]
# Select specific rulesets to use
select = [
    # pycodestyle
    "E",
    # pyflakes
    "F",
    # flake8-bugbear
    "B",
    # pyupgrade
    "UP",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.isort.sections]
"django" = ["django"]
"wagtail" = ["wagtail"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-third-party = ["jinja2"]
section-order = [
    "future",
    "standard-library",
    "django",
    "wagtail",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.coverage.run]
omit = [
    "wagtailflags/tests/*",
]

[tool.bandit]
exclude_dirs = [
    "*/tests/*",
]
