[metadata]
name = wagtail-flags
version = 5.2.0
author = CFPB
author_email = tech@cfpb.gov
description = Feature flags for Wagtail sites
long_description = file: README.md
long_description_content_type = text/markdown
license = CC0
url = https://github.com/cfpb/wagtail-flags
classifiers =
    Operating System :: OS Independent
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Wagtail
    Framework :: Wagtail :: 2
    Framework :: Wagtail :: 3
    License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
    License :: Public Domain
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
zip_safe = False
install_requires =
    wagtail>=2.15,<4
    django-flags>=4.2,<5.1

[options.extras_require]
testing =
    coverage

[flake8]
ignore = E731,W503,W504
exclude =
    .git,
    .tox,
    __pycache__,
    */migrations/*.py,
    .eggs/*,

[isort]
profile = black
combine_as_imports = 1
lines_after_imports = 2
include_trailing_comma = 1
multi_line_output = 3
skip = .tox,migrations
known_django = django
known_wagtail = wagtail
default_section = THIRDPARTY
sections = FUTURE,STDLIB,DJANGO,WAGTAIL,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[mypy]
allow_redefinition = false
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_untyped_calls = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
